# group-perception

./: .gitignore  README.md  rosbagplay.sh  stack.xml
perception_client_pkg/: CMakeLists.txt  mainpage.dox  manifest.xml  run.launch
perception_client_pkg/src/: perception_client.cpp
perception_group_msgs/: .gitignore  mainpage.dox  manifest.xml
perception_group_msgs/msg/: PerceivedObject.msg
perception_group_msgs/src/perception_group_msgs/msg/: _PerceivedObject.py  __init__.py
perception_group_msgs/srv/: GetClusters.srv
perception_pkg/: CMakeLists.txt  manifest.xml
perception_pkg/src/: cluster_extraction.cpp  concave_hull.cpp  extract_objects.cpp  objects_on_table.cpp  pcd_processor.cpp  pcd_view.cpp  perception_pkg.sublime-project  perception_pkg.sublime-workspace  perception_server.cpp  subscribe.cpp
